apps/kustomize/envoy-gateway/env/prod/gateway-address-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: envoy-system-prod
spec:
  addresses:
    - type: IPAddress
      value: 1.2.3.4
